[gd_scene load_steps=2 format=2]

[ext_resource path="res://custom/nodes/screenshake.gd" type="Script" id=1]

[node name="Screenshake" type="Node"]
script = ExtResource( 1 )

[node name="OffsetTween" type="Tween" parent="."]

[node name="FrequencyTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
